# Ann_Yoddha

./: .gitignore  README.md  README_LOCAL_DEPLOYMENT.md  README_TESTING_FULL_FLOW.md  context.txt  package-lock.json  package.json
ann-yoddha-harvest-help/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
ann-yoddha-mobile/: .env.example  App.tsx  app.json  (+2 more)
ann_yoddha_backend/: .env.example  README.md  ann_yoddha.db  main.py  pyproject.toml  requirements.txt
ann_yoddha_backend/app/: __init__.py  auth.py  main.py
ann_yoddha_backend/app/api/: __init__.py  deps.py
ann_yoddha_backend/app/api/v1/: api.py
ann_yoddha_backend/app/api/v1/endpoints/: analytics.py  diagnosis.py  farmers.py  indexing.py  recommendations.py
ann_yoddha_backend/app/core/: config.py  security.py  supabase_client.py
ann_yoddha_backend/app/db/: models.py  session.py
ann_yoddha_backend/app/engines/: __init__.py
ann_yoddha_backend/app/engines/pageindex/: __init__.py  config.yaml  page_index.py  utils.py
ann_yoddha_backend/app/engines/rag/: __init__.py  chain.py  document_loader.py  knowledge_base.py  pageindex_retriever.py  vector_store.py
ann_yoddha_backend/app/engines/vision/: __init__.py  snn_inference.py  yolov12_nano.py
ann_yoddha_backend/app/schemas/: diagnosis.py  recommendation.py
ann_yoddha_backend/app/services/: __init__.py  inference.py  notification.py  storage.py  tavily_search.py
ann_yoddha_backend/data/: .gitkeep  supabase_schema.sql
ann_yoddha_backend/models/: .gitkeep
ann_yoddha_backend/tests/: test_health.py
(+48 files in other folders)
