[project]
name = "ann-yoddha-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pyjwt[crypto]>=2.8.0",
    "sqlalchemy>=2.0.47",
    "supabase>=2.28.0",
    "uvicorn[standard]>=0.41.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "qdrant-client>=1.12.0",
    "ultralytics>=8.4.34",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
