[project]
name = "ann-yoddha-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "numpy>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=10.4.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pyjwt[crypto]>=2.8.0",
    "supabase>=2.28.0",
    "tensorflow>=2.18.0",
    "uvicorn[standard]>=0.41.0",
    "ultralytics>=8.4.34",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "reportlab>=4.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.12.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.27.2.2",
    "langchain-openai>=1.1.12",
    "tavily-python>=0.7.23",
]
